--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
